@@ -20,12 +20,12 @@ Furthermore, it requires libpcre, libtranscript, libunistring, libt3key,
 libt3window, libsigc++ (2.0 or newer) and a Pthread library.
 
 libt3widget can optionally be built to include support for integration with the
-X11 clipboard and primary selection. If this is desired, the Xlib library needs
-to be present when building. To allow using libt3widget without Xlib present,
-the integration is built as a separate module. This means libt3widget also
-needs a facility for dynamically loading this module. If your system provides
-the POSIX dlopen/dlsym/dlclose interface, this will be used. Otherwise, GNU
-libtool's libltdl needs to be present.
+X11 clipboard and primary selection. If this is desired, either XCB or the Xlib
+library needs to be present when building. To allow using libt3widget without
+XCB/Xlib present, the integration is built as a separate module. This means
+libt3widget also needs a facility for dynamically loading this module. If your
+system provides the POSIX dlopen/dlsym/dlclose interface, this will be used.
+Otherwise, GNU libtool's libltdl needs to be present.
 
 There are two ways in which to compile libt3widget:
 
